@@ -43,6 +43,7 @@ WGX_I18N_RESOURCE_ENTRY i18n_table[] = {
 	{0, L"QUICK_OPTIMIZE",           L"&Quick optimization",      NULL},
 	{0, L"FULL_OPTIMIZE",            L"&Full optimization",       NULL},
 	{0, L"STOP",                     L"&Stop",                    NULL},
+	{0, L"REPEAT_ACTION",            L"Re&peat action",           NULL},
 	{0, L"SKIP_REMOVABLE_MEDIA",     L"Skip removable &media",    NULL},
 	{0, L"RESCAN_DRIVES",            L"&Rescan drives",           NULL},
 	{0, L"WHEN_DONE",                L"&When done",               NULL},
@@ -138,6 +139,7 @@ struct menu_item menu_items[] = {
 	{IDM_QUICK_OPTIMIZE,          L"QUICK_OPTIMIZE",           "F7"    },
 	{IDM_FULL_OPTIMIZE,           L"FULL_OPTIMIZE",            "Ctrl+F7"},
 	{IDM_STOP,                    L"STOP",                     "Ctrl+C"},
+	{IDM_REPEAT_ACTION,           L"REPEAT_ACTION",            "Shift+R"},
 	{IDM_IGNORE_REMOVABLE_MEDIA,  L"SKIP_REMOVABLE_MEDIA",     "Ctrl+M"},
 	{IDM_RESCAN,                  L"RESCAN_DRIVES",            "Ctrl+D"},
 	{IDM_WHEN_DONE_NONE,          L"WHEN_DONE_NONE",           NULL},
