@@ -51,6 +51,7 @@ IDB_ABOUTBOX_PICTURE_8_BIT    BITMAP  DISCARDABLE     "res/ship_8bit.bmp"
 * analysis, help icons - from NSIS compiler's frontend
 * stop, config, terminal icons - from Silk icon set 1.3 http://www.famfamfam.com/lab/icons/silk/
 * report, script icons - from http://brandspankingnew.net/download.php?file=doc_types_v2.zip
+* repeat icon - by Interactivemania http://www.iconfinder.com/icondetails/49846/16/alt_media_repeat_icon
 * All icons are licensed under terms permitting the use for non commercial purposes.
 */
 IDB_TOOLBAR                    BITMAP  DISCARDABLE     "res/toolbar24.bmp"
@@ -133,6 +134,7 @@ BEGIN
 	VK_F7,         IDM_QUICK_OPTIMIZE,          VIRTKEY, NOINVERT
 	VK_F7,         IDM_FULL_OPTIMIZE,           VIRTKEY, CONTROL, NOINVERT
 	"C",           IDM_STOP,                    VIRTKEY, CONTROL, NOINVERT
+	"R",           IDM_REPEAT_ACTION,           VIRTKEY, SHIFT, NOINVERT
 	"M",           IDM_IGNORE_REMOVABLE_MEDIA,  VIRTKEY, CONTROL, NOINVERT
 	"D",           IDM_RESCAN,                  VIRTKEY, CONTROL, NOINVERT
 	VK_F8,         IDM_SHOW_REPORT,             VIRTKEY, NOINVERT
